# auto-coder-chat-lite

./: .gitignore  .gitmodules  README.md  conftest.py  publish_to_pypi.sh  pyproject.toml  pytest.ini  readme-cn.md  requirements.txt  setup.py  update_version.py
.auto-coder-chat-lite/: memory.json
.github/workflows/: python-publish.yml
auto_coder_chat-lite/: chat.py
auto_coder_chat-lite/common/: utils.py
auto_coder_chat_lite/: agent.py  chat.py  command_completer.py  configuration_handler.hy  constants.hy  constants.py  lang.py  project.py  prompt.py  template.txt
auto_coder_chat_lite/common/: code_auto_merge_editblock.py  config_manager.py  git_diff_extractor.py  utils.py
auto_coder_chat_lite/lib/: agent.hy  logger.hy  merge.hy  prompt.hy
auto_coder_chat_lite/template/: code.txt  code_git_diff.txt  code_hylang.txt  code_search_replace.txt  commit_message.txt  hylang_grammer.txt
auto_coder_chat_lite/utils/: conversation_store.py
src/auto_coder_chat_lite/: cli.py  code_auto_merge_editblock.py
src/auto_coder_chat_lite/templates/project_template/: README.md
tests/: __init__.py  test_code_auto_merge_editblock.py  test_configuration_handler.py  test_generate_file_tree.py  test_merge.hy  test_merge.py  test_utils.py
