[tool.poetry]
name = "auto-coder-chat-lite"
version = "0.1.10"
description = "a simple code chat tool inspired by auto coder"
authors = ["cowboy <251027705@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0"
colorama = "0.4.6"
pathspec = "0.12.1"
prompt_toolkit = "3.0.47"
pydantic = "2.8.2"
Pygments = "2.18.0"
pyperclip = "1.9.0"
rich = "13.7.1"
GitPython = "3.1.43"
Jinja2 = "3.1.4"
pylint = "3.2.7"
openai = "1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
