[tool.poetry]
name = "auto-coder-chat-lite"
version = "0.1.13"
description = "a simple code chat tool inspired by auto coder"
authors = ["cowboy <251027705@qq.com>"]
readme = "README.md"
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.14"
colorama = "0.4.6"
pathspec = "0.12.1"
prompt_toolkit = "3.0.47"
pydantic = "2.8.2"
Pygments = "2.18.0"
pyperclip = "1.9.0"
rich = "13.7.1"
GitPython = "3.1.43"
Jinja2 = "3.1.4"
pylint = "3.2.7"
openai = "1.44.1"
hy = "^1.0.0"
loguru = "^0.7.2"
hyrule = "^0.7.0"
toolz = "^0.12.1"


[tool.poetry.scripts]
"chat.code" = "auto_coder_chat_lite.chat:main"
"chat.prompt" = "auto_coder_chat_lite.prompt:main"
"chat.agent" = "auto_coder_chat_lite.agent:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
